--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -1,17 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-    </startup>
-    <System.Windows.Forms.ApplicationConfigurationSection>
-        <add key="DpiAwareness" value="PerMonitorV2" />
-        <add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
-    </System.Windows.Forms.ApplicationConfigurationSection>
-    <appSettings>
-      <add key="server.url" value="http://localhost:5000" />
-      <add key="cms.dir" value="c:\Program Files (x86)\Polyvision\CMS\" />
-      <add key="nvr.connect.time.ms" value="2000" />
-      <add key="nvr.keeplife.time.sec" value="5" />
-      <add key="nvr.detect.time.sec" value="10" />
-    </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+  <System.Windows.Forms.ApplicationConfigurationSection>
+    <add key="DpiAwareness" value="PerMonitorV2" />
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
+  </System.Windows.Forms.ApplicationConfigurationSection>
+  <appSettings>
+    <add key="server.url" value="http://localhost:5000" />
+    <add key="cms.dir" value="c:\Program Files (x86)\Polyvision\CMS\" />
+    <add key="nvr.connect.time.ms" value="2000" />
+    <add key="nvr.keeplife.time.sec" value="5" />
+    <add key="nvr.detect.time.sec" value="10" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
