--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -9,7 +9,8 @@
   </System.Windows.Forms.ApplicationConfigurationSection>
   <appSettings>
     <add key="server.url" value="http://localhost:5000" />
-    <add key="sdk.dir" value="c:\Program Files (x86)\Polyvision\bin_x64\" />
+    <add key="netsdk.dir" value="netsdk" />
+    <add key="ffmpeg.dir" value="ffmpeg" />
     <add key="nvr.connect.time.ms" value="2000" />
     <add key="nvr.keeplife.time.sec" value="2" />
     <add key="nvr.detect.time.sec" value="5" />
