--- a/SafeClient/SafeClient.csproj
+++ b/SafeClient/SafeClient.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,12 +82,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\dto\AlertInfo.cs" />
     <Compile Include="api\dto\CameraInfo.cs" />
     <Compile Include="api\dto\NvrInfo.cs" />
+    <Compile Include="api\FFmpeg.cs" />
     <Compile Include="api\H264.cs" />
     <Compile Include="api\impl\MockServerApi.cs" />
     <Compile Include="api\IServerApi.cs" />
     <Compile Include="api\NetSDK.cs" />
+    <Compile Include="gui\AlertPlayerPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="gui\AlertPlayerPanel.Designer.cs">
+      <DependentUpon>AlertPlayerPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gui\AlertViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gui\AlertViewForm.Designer.cs">
+      <DependentUpon>AlertViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="gui\CameraGridPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -141,6 +156,12 @@
     <Compile Include="gui\PlayerNavigationPanel.Designer.cs">
       <DependentUpon>PlayerNavigationPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="gui\SearchAlertPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="gui\SearchAlertPanel.Designer.cs">
+      <DependentUpon>SearchAlertPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="gui\SearchVideoFileHistoryPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -152,6 +173,18 @@
     </Compile>
     <Compile Include="gui\SplashScreen.Designer.cs">
       <DependentUpon>SplashScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gui\VideoExportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gui\VideoExportForm.Designer.cs">
+      <DependentUpon>VideoExportForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gui\VideoFileList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="gui\VideoFileList.Designer.cs">
+      <DependentUpon>VideoFileList.cs</DependentUpon>
     </Compile>
     <Compile Include="gui\VideoPlayerPanel.cs">
       <SubType>UserControl</SubType>
@@ -165,20 +198,32 @@
     <Compile Include="gui\VideoViewForm.Designer.cs">
       <DependentUpon>VideoViewForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="model\device\AlertModel.cs" />
     <Compile Include="model\camera\CameraController.cs" />
     <Compile Include="model\camera\CameraModel.cs" />
     <Compile Include="model\camera\CameraSreamModel.cs" />
     <Compile Include="model\camera\ICameraView.cs" />
+    <Compile Include="model\device\ChartModel.cs" />
     <Compile Include="model\nvr\NvrController.cs" />
     <Compile Include="model\nvr\NvrModel.cs" />
     <Compile Include="model\video\FileAlertType.cs" />
     <Compile Include="model\video\IVideoPlayerView.cs" />
+    <Compile Include="model\video\VideoFileDownloader.cs" />
     <Compile Include="model\video\VideoFileModel.cs" />
     <Compile Include="model\video\VideoFilePlayer.cs" />
+    <Compile Include="model\video\VideoPlayBackSource.cs" />
+    <Compile Include="model\video\VideoTimeRangeModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="service\DeviceService.cs" />
     <Compile Include="service\CameraService.cs" />
     <Compile Include="service\DI.cs" />
+    <EmbeddedResource Include="gui\AlertPlayerPanel.resx">
+      <DependentUpon>AlertPlayerPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gui\AlertViewForm.resx">
+      <DependentUpon>AlertViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="gui\CameraGridPanel.resx">
       <DependentUpon>CameraGridPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -203,11 +248,20 @@
     <EmbeddedResource Include="gui\PlayerNavigationPanel.resx">
       <DependentUpon>PlayerNavigationPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="gui\SearchAlertPanel.resx">
+      <DependentUpon>SearchAlertPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="gui\SearchVideoFileHistoryPanel.resx">
       <DependentUpon>SearchVideoFileHistoryPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="gui\SplashScreen.resx">
       <DependentUpon>SplashScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gui\VideoExportForm.resx">
+      <DependentUpon>VideoExportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gui\VideoFileList.resx">
+      <DependentUpon>VideoFileList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="gui\VideoPlayerPanel.resx">
       <DependentUpon>VideoPlayerPanel.cs</DependentUpon>
