--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -14,6 +14,8 @@
     <add key="nvr.connect.time.ms" value="2000" />
     <add key="nvr.keeplife.time.sec" value="2" />
     <add key="nvr.detect.time.sec" value="5" />
+    <add key="alert.before.sec" value="43200" />
+    <add key="alert.after.sec" value="43200" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
