--- a/SafeClient/packages.config
+++ b/SafeClient/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AGauge_V2" version="2.0.2" targetFramework="net40" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
   <package id="NAudio" version="1.10.0" targetFramework="net40" />
   <package id="NLog" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Config" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Schema" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Windows.Forms" version="4.3.0" targetFramework="net40" />
+  <package id="Spring.Rest" version="1.1.1" targetFramework="net40" />
 </packages>
