--- a/SafeClient/packages.config
+++ b/SafeClient/packages.config
@@ -3,6 +3,7 @@
   <package id="AGauge_V2" version="2.0.2" targetFramework="net40" />
   <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
   <package id="NAudio" version="1.10.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" />
   <package id="NLog" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Config" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Schema" version="4.7.2" targetFramework="net40" />
