--- a/SafeServer/SafeServer.csproj
+++ b/SafeServer/SafeServer.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="NLog" Version="4.7.3" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
     <PackageReference Include="NLog.Windows.Forms" Version="4.3.0" />
+    <PackageReference Include="Npgsql" Version="4.1.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.5.1" />
   </ItemGroup>
