--- a/SafeServer/SafeServer.csproj
+++ b/SafeServer/SafeServer.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ltr\LtrRead.cs~RFa0d0413.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="NLog" Version="4.7.3" />
@@ -16,6 +20,13 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.5.1" />
+    <PackageReference Include="System.Reactive" Version="4.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="ltrModulesNet">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\L-Card\ltr\bin\ltrModulesNet\ltrModulesNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
