--- a/SafeServer/SafeServer.csproj
+++ b/SafeServer/SafeServer.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Reference Include="ltrModulesNet">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\L-Card\ltr\bin\ltrModulesNet\ltrModulesNet.dll</HintPath>
+      <Private>true</Private>
     </Reference>
   </ItemGroup>
 
