move from old server

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "DbConnection": "Server=127.0.0.1;Port=5432;Database=monitoring;User Id=postgres;Password=postgres;CommandTimeout=20;"
+  }
 }
