--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -1,12 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.5.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.5.1" />
+      <PackageReference Include="System.Reactive" Version="4.4.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="ltrModulesNet">
+        <HintPath>ltrModulesNet.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
