--- a/SafeClient/packages.config
+++ b/SafeClient/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AGauge_V2" version="2.0.2" targetFramework="net40" />
   <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.4.1" targetFramework="net40" />
   <package id="NAudio" version="1.10.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" />
   <package id="NLog" version="4.7.2" targetFramework="net40" />
