--- a/SafeClient/SafeClient.csproj
+++ b/SafeClient/SafeClient.csproj
@@ -95,9 +95,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\dto\CameraGrid.cs" />
+    <Compile Include="api\dto\config\Alarm.cs" />
     <Compile Include="api\dto\AlertInfo.cs" />
     <Compile Include="api\dto\CameraInfo.cs" />
     <Compile Include="api\dto\Config.cs" />
+    <Compile Include="api\dto\config\Calibr.cs" />
     <Compile Include="api\dto\DeviceInfo.cs" />
     <Compile Include="api\dto\DeviceType.cs" />
     <Compile Include="api\dto\NvrInfo.cs" />
@@ -108,6 +111,12 @@
     <Compile Include="api\impl\RestServerApi.cs" />
     <Compile Include="api\IServerApi.cs" />
     <Compile Include="api\NetSDK.cs" />
+    <Compile Include="gui\device\DeviceEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gui\device\DeviceEditorForm.Designer.cs">
+      <DependentUpon>DeviceEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="gui\device\DeviceViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -330,6 +339,9 @@
     <Compile Include="service\CameraService.cs" />
     <Compile Include="service\DI.cs" />
     <Compile Include="service\StatusReaderService.cs" />
+    <EmbeddedResource Include="gui\device\DeviceEditorForm.resx">
+      <DependentUpon>DeviceEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="gui\device\DeviceViewForm.resx">
       <DependentUpon>DeviceViewForm.cs</DependentUpon>
     </EmbeddedResource>
