--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Allow": "*",
   "Settings": {
     "DbConnection": "Server=127.0.0.1;Port=5432;Database=monitoring;User Id=postgres;Password=postgres;CommandTimeout=20;"
   }
